--- a/css/main.css
+++ b/css/main.css
@@ -564,3 +564,83 @@ p.rights a{
     font-family: 'open_bold', arial;
     font-weight: bold;
 }
+
+
+
+
+
+
+
+
+
+
+$facebook-chat-width: 270px;
+$facebook-tab-background: #3a5795;
+$facebook-tab-height: 42px;
+$facebook-tab-text-color: #fff;
+$facebook-tab-text-font-size: 18px;
+$facebook-tab-margin-right: 38px;
+#cfacebook {
+  position: fixed;
+  bottom: 0;
+  right: $facebook-tab-margin-right;
+  z-index: 999999999999999;
+  width: $facebook-chat-width;
+  height: auto;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  overflow: hidden;
+  .fchat {
+    float: left;
+    width: 100%;
+    height: 270px;
+    overflow: hidden;
+    display: none;
+    background-color: #fff;
+    .fb-page {
+      margin-top: -130px; //ẩn banner của facebook
+      float: left;
+    }
+  }
+  a.chat_fb {
+    float: left;
+    padding: 0 10px;
+    width: $facebook-chat-width;
+    color: $facebook-tab-text-color;
+    text-decoration: none;
+    height: $facebook-tab-height;
+    line-height: $facebook-tab-height;
+    background-color: $facebook-tab-background;
+    z-index: 9999999;
+    font-size: $facebook-tab-text-font-size;
+    &:hover {
+      text-decoration: none;
+    }
+    .fa {
+      margin-right: 10px;
+    }
+    #minimize-facechat {
+      display: none;
+      border: 1px solid #a9a9a9;
+      float: right;
+      height: 25px;
+      margin-top: 8px;
+      width: 25px;
+      position: relative;
+      right: 0;
+      &:after{
+        content: '';
+        display: block;
+        width: 15px;
+        height: 2px;
+        background: white;
+        position: absolute;
+        top: 11px;
+        right: 4px;
+      }
+    }
+  }
+  @media (max-width: $screen-xs-max) { 
+    right: 0;
+  }
+}
